--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
         </dependency>  
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>        
+    </repositories>
+         
     <properties>
         <jdk.version>1.7</jdk.version>
         <servlet.version>2.5</servlet.version>
